After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782192 - (Week view) crash in update_active_date
(Week view) crash in update_active_date
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: Views
unspecified
Other Linux
: Normal major
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-04 22:27 UTC by Jeremy Bicha
Modified: 2017-05-06 15:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: fix setting active-date logic (813 bytes, patch)
2017-05-06 15:17 UTC, Mohammed Sadiq
committed Details | Review

Description Jeremy Bicha 2017-05-04 22:27:48 UTC
Ubuntu 17.04/17.10 has seen some crashes with gnome-calendar 3.24.1.

Crash signature:
 /usr/bin/gnome-calendar:11:get_start_of_week:update_unchanged_events:gcal_week_header_set_date:gcal_week_view_set_date:update_active_date

  • #0 get_start_of_week
    at gcal-utils.c line 527
  • #1 update_unchanged_events
    at views/gcal-week-header.c line 772
  • #2 gcal_week_header_set_date
    at views/gcal-week-header.c line 1760
  • #3 gcal_week_view_set_date
    at views/gcal-week-view.c line 187
  • #4 update_active_date
    at gcal-window.c line 232
  • #5 object_set_property
    at ../../../../gobject/gobject.c line 1423
  • #6 g_object_set_valist
    at ../../../../gobject/gobject.c line 2167
  • #7 g_object_set
    at ../../../../gobject/gobject.c line 2277
  • #8 gcal_application_activate
    at gcal-application.c line 232
  • #9 g_closure_invoke
    at ../../../../gobject/gclosure.c line 804
  • #10 signal_emit_unlocked_R
    at ../../../../gobject/gsignal.c line 3673
  • #11 g_signal_emit_valist
    at ../../../../gobject/gsignal.c line 3391
  • #12 g_signal_emit_by_name
    at ../../../../gobject/gsignal.c line 3487
  • #13 g_application_impl_method_call
    at ../../../../gio/gapplicationimpl-dbus.c line 195
  • #14 call_in_idle_cb
    at ../../../../gio/gdbusconnection.c line 4838
  • #15 g_main_dispatch
    at ../../../../glib/gmain.c line 3203
  • #16 g_main_context_dispatch
    at ../../../../glib/gmain.c line 3856
  • #17 g_main_context_iterate
    at ../../../../glib/gmain.c line 3929
  • #18 g_main_context_iteration
    at ../../../../glib/gmain.c line 3990
  • #19 g_application_run
    at ../../../../gio/gapplication.c line 2381
  • #20 main
    at main.c line 44

Comment 1 Jeremy Bicha 2017-05-04 22:28:51 UTC
.

Thread 1 (Thread 0x7f3a8cf004c0 (LWP 7868))

  • #0 get_start_of_week
    at gcal-utils.c line 527
  • #1 update_unchanged_events
    at views/gcal-week-header.c line 772
  • #2 gcal_week_header_set_date
    at views/gcal-week-header.c line 1760
  • #3 gcal_week_view_set_date
    at views/gcal-week-view.c line 187
  • #4 update_active_date
    at gcal-window.c line 232
  • #5 object_set_property
    at ../../../../gobject/gobject.c line 1423
  • #6 g_object_set_valist
    at ../../../../gobject/gobject.c line 2167
  • #7 g_object_set
    at ../../../../gobject/gobject.c line 2277
  • #8 gcal_application_activate
    at gcal-application.c line 232
  • #9 g_closure_invoke
    at ../../../../gobject/gclosure.c line 804
  • #10 signal_emit_unlocked_R
    at ../../../../gobject/gsignal.c line 3673
  • #11 g_signal_emit_valist
    at ../../../../gobject/gsignal.c line 3391
  • #12 g_signal_emit_by_name
    at ../../../../gobject/gsignal.c line 3487
  • #13 g_application_impl_method_call
    at ../../../../gio/gapplicationimpl-dbus.c line 195
  • #14 call_in_idle_cb
    at ../../../../gio/gdbusconnection.c line 4838
  • #15 g_main_dispatch
    at ../../../../glib/gmain.c line 3203
  • #16 g_main_context_dispatch
    at ../../../../glib/gmain.c line 3856
  • #17 g_main_context_iterate
    at ../../../../glib/gmain.c line 3929
  • #18 g_main_context_iteration
    at ../../../../glib/gmain.c line 3990
  • #19 g_application_run
    at ../../../../gio/gapplication.c line 2381
  • #20 main
    at main.c line 44

Comment 2 Mohammed Sadiq 2017-05-06 15:17:40 UTC
Created attachment 351261 [details] [review]
application: fix setting active-date logic
Comment 3 Mohammed Sadiq 2017-05-06 15:18:38 UTC
Hi. Can you please check if this patch fixes the issue?

Thanks
Comment 4 Jeremy Bicha 2017-05-06 15:20:04 UTC
I don't know how to duplicate the issue; I was just forwarding it on from errors.ubuntu.com .
Comment 5 Georges Basile Stavracas Neto 2017-05-06 15:24:22 UTC
Review of attachment 351261 [details] [review]:

Nice catch! A gross overlook from my side. Thanks for the patch.
Comment 6 Georges Basile Stavracas Neto 2017-05-06 15:31:30 UTC
Thanks!

Attachment 351261 [details] pushed as 9ed375c - application: fix setting active-date logic