application: fix setting active-date logic

https://bugzilla.gnome.org/show_bug.cgi?id=782192